cleanup CTCondition.getAuxillaryColumns additionally minor simplification in UpdateMatchingStatsSqlJob