@@ -1,10 +1,11 @@
 package com.bakdata.conquery.models.datasets.concepts.conditions;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
+import jakarta.validation.constraints.NotEmpty;
 
 import com.bakdata.conquery.io.cps.CPSType;
-import com.bakdata.conquery.models.datasets.concepts.Connector;
 import com.bakdata.conquery.sql.conversion.cqelement.concept.CTConditionContext;
 import com.bakdata.conquery.sql.conversion.dialect.SqlFunctionProvider;
 import com.bakdata.conquery.sql.conversion.model.filter.ConditionType;
@@ -13,7 +14,6 @@ import com.bakdata.conquery.sql.conversion.model.filter.WhereConditionWrapper;
 import com.bakdata.conquery.util.CalculatedValue;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import io.dropwizard.validation.ValidationMethod;
-import jakarta.validation.constraints.NotEmpty;
 import lombok.Getter;
 import lombok.Setter;
 import org.jooq.Condition;
@@ -64,8 +64,8 @@ public class PrefixRangeCondition implements CTCondition {
 	}
 
 	@Override
-	public Set<String> getColumns(Connector connector) {
-		return Set.of(connector.getColumn().getColumn());
+	public Set<String> getAuxillaryColumns() {
+		return Collections.emptySet();
 	}
 
 	private String buildSqlRegexPattern(SqlFunctionProvider functionProvider) {
